# FastGFX

./: .gitignore
demo-app/: CMakeLists.txt
demo-app/include/: ObjectManager.h
demo-app/include/test_scenes/: SceneMain.h
demo-app/source/: ObjectManager.cpp  SceneMain.cpp
render-api/: CMakeLists.txt
render-api/include/core/: AppModel.h  Renderer.h
render-api/include/resource/: Buffer.h  Shader.h
render-api/include/util/: ConsoleLog.h  Scene.h
render-api/shaders/: rgba_fs.frag  rgba_vs.vert
render-api/source/core/: AppModel.cpp  Renderer.cpp
render-api/source/resource/: Buffer.cpp  Shader.cpp
